--- a/index.html
+++ b/index.html
@@ -18,19 +18,28 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">About </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="#">Portofolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="#">Contact</a>
                 </li>
             </ul>
         </div>
     </nav>
     <!--  End Navbar  -->
+    
+    <!-- Jumbrotonn -->
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
 
+            <h1 class="display-4">Dony Wahyu Ramadhan</h1>
+            <p class="lead">Student | Web Developer</p>
+        </div>
+    </div>
+    <!-- End Jumbroton   -->
 
 
 
