--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     
     <!-- Jumbrotonn -->
     <div class="jumbotron jumbotron-fluid">
-        <div class="container">
+        <div class="container justify-content-center">
 
             <h1 class="display-4">Dony Wahyu Ramadhan</h1>
             <p class="lead">Student | Web Developer</p>
