--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
     
     <!-- Jumbrotonn -->
     <div class="jumbotron jumbotron-fluid">
-        <div class="container justify-content-center">
-
+        <div class="container text-center">
+            <figure class="figure">
+                <img src="..." class="figure-img img-fluid rounded" alt="...">
+            </figure>
             <h1 class="display-4">Dony Wahyu Ramadhan</h1>
             <p class="lead">Student | Web Developer</p>
         </div>
