--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!--  End Navbar  -->
     
     <!-- Jumbrotonn -->
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron jumbotron-fluid h-100">
         <div class="container text-center">
             <figure class="figure">
                 <img src="..." class="figure-img img-fluid rounded" alt="...">
