--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Dony Wahyu Ramadhan</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Viga&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="bg-dark">
     <!--  Navbar  -->
-    <nav class="navbar navbar-expand-lg  fixed-top text-light">
+    <nav class="navbar navbar-expand-lg  fixed-top ">
         <a class="navbar-brand" href="#">Dony Wahyu</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -33,7 +33,7 @@
     <!--  End Navbar  -->
     
     <!-- Jumbrotonn -->
-    <div class="jumbotron jumbotron-fluid d-flex w-100 h-100">
+    <div class="jumbotron jumbotron-fluid  bg-transparent">
         <div class="container text-center">
             <figure class="figure">
                 <img src="https://res.cloudinary.com/teepublic/image/private/s--hCXq1Vmk--/t_Preview/b_rgb:ffb81c,c_limit,f_jpg,h_630,q_90,w_630/v1538507493/production/designs/3247947_0.jpg" class="figure-img img-thumbnail rounded-circle" style="width:35%;height:35%;">
