--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="bg-dark">
     <!--  Navbar  -->
     <nav class="navbar navbar-expand-lg  fixed-top ">
-        <a class="navbar-brand" href="#">Dony Wahyu</a>
+        <a class="navbar-brand nav-link" href="#">Dony Wahyu</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
