--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="bg-dark">
     <!--  Navbar  -->
-    <nav class="navbar navbar-expand-lg  fixed-top ">
+    <nav class="navbar navbar-expand-lg  fixed-top bg-light">
         <a class="navbar-brand nav-link" href="#">Dony Wahyu</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
