--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="bg-dark">
     <!--  Navbar  -->
-    <nav class="navbar navbar-expand-lg  fixed-top navbar-dark">
+    <nav class="navbar navbar-expand-lg  fixed-top navbar-dark bg-dark">
         <a class="navbar-brand nav-link" href="#">Dony Wahyu</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -33,7 +33,7 @@
     <!--  End Navbar  -->
     
     <!-- Jumbrotonn -->
-    <div class="jumbotron jumbotron-fluid  bg-transparent text-light">
+    <div class="jumbotron jumbotron-fluid  bg-transparent text-light mt-5">
         <div class="container text-center">
             <figure class="figure">
                 <img src="https://res.cloudinary.com/teepublic/image/private/s--hCXq1Vmk--/t_Preview/b_rgb:ffb81c,c_limit,f_jpg,h_630,q_90,w_630/v1538507493/production/designs/3247947_0.jpg" class="figure-img img-thumbnail rounded-circle" style="width:35%;height:35%;">
