--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <figure class="figure">
                 <img src="https://res.cloudinary.com/teepublic/image/private/s--hCXq1Vmk--/t_Preview/b_rgb:ffb81c,c_limit,f_jpg,h_630,q_90,w_630/v1538507493/production/designs/3247947_0.jpg" class="figure-img img-thumbnail rounded-circle" style="width:35%;height:35%;">
             </figure>
-            <h1 class="display-4">Dony Wahyu Ramadhan</h1>
+            <div class="display-4">Dony Wahyu Ramadhan</div>
             <p class="lead">Student | Web Developer</p>
         </div>
     </div>
