--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Viga&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="bg-dark">
+<body >
     <!--  Navbar  -->
     <nav class="navbar navbar-expand-lg  fixed-top navbar-dark bg-dark">
         <a class="navbar-brand nav-link" href="#">Dony Wahyu</a>
@@ -34,7 +34,7 @@
     
     <!-- Jumbrotonn -->
     <section id="home">
-        <div class="jumbotron jumbotron-fluid  bg-transparent text-light mt-5">
+        <div class="jumbotron jumbotron-fluid  bg-transparent text-dark mt-5">
             <div class="container text-center">
                 <figure class="figure mt-4">
                     <img src="https://res.cloudinary.com/teepublic/image/private/s--hCXq1Vmk--/t_Preview/b_rgb:ffb81c,c_limit,f_jpg,h_630,q_90,w_630/v1538507493/production/designs/3247947_0.jpg" class="figure-img img-thumbnail rounded-circle" style="width:35%;height:35%;">
