--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Viga&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body >
+<body class="bg-dark">
     <!--  Navbar  -->
     <nav class="navbar navbar-expand-lg  fixed-top navbar-dark bg-dark">
         <a class="navbar-brand nav-link" href="#">Dony Wahyu</a>
