--- a/index.html
+++ b/index.html
@@ -31,8 +31,14 @@
         </div>
     </nav>
     <!--  End Navbar  -->
-    
-    <!-- Jumbrotonn -->
+
+    <!--  Main -->
+    <div id="fullpage">
+        <div class="section">Some section</div>
+        <div class="section">Some section</div>
+        <div class="section">Some section</div>
+        <div class="section">Some section</div>
+    </div>
     <section id="home">
         <div class="jumbotron jumbotron-fluid  bg-transparent text-light mt-5">
             <div class="container text-center">
@@ -44,8 +50,7 @@
             </div>
         </div>
     </section>
-    <!-- End Jumbroton   -->
-
+    <!--  End Main-->
 
 
 
@@ -68,10 +73,12 @@
 
 
     <!-- Script -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.7/fullpage.extensions.min.js" ></script><script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.7/fullpage.min.js" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.7/fullpage.extensions.min.js" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.7/fullpage.min.js" ></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" ></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" ></script>
+    <script src="js/index.js"></script>
     <!-- End Script -->
 </body>
 </html>
