--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Dony Wahyu Ramadhan</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Viga&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.7/fullpage.css" />
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="bg-dark">
     <!--  Navbar  -->
@@ -31,14 +31,8 @@
         </div>
     </nav>
     <!--  End Navbar  -->
-
-    <!--  Main -->
-    <div id="fullpage">
-        <div class="section">Some section</div>
-        <div class="section">Some section</div>
-        <div class="section">Some section</div>
-        <div class="section">Some section</div>
-    </div>
+    
+    <!-- Jumbrotonn -->
     <section id="home">
         <div class="jumbotron jumbotron-fluid  bg-transparent text-light mt-5">
             <div class="container text-center">
@@ -50,7 +44,8 @@
             </div>
         </div>
     </section>
-    <!--  End Main-->
+    <!-- End Jumbroton   -->
+
 
 
 
@@ -73,12 +68,9 @@
 
 
     <!-- Script -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.7/fullpage.extensions.min.js" ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.7/fullpage.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js" ></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" ></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" ></script>
-    <script src="js/index.js"></script>
     <!-- End Script -->
 </body>
 </html>
