--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
         <div class="section " id="section0">
             <h1>Section 1</h1>
         </div>
-        <div class="section active" id="section1">
+        <div class="section" id="section1">
             <div class="slide" id="slide1">
                 <div class="intro">
                     <h1>Slide 2.1</h1>
                     <iframe data-src="auto-height.html"></iframe>
                 </div>
             </div>
-            <div class="slide active" id="slide2">
+            <div class="slide " id="slide2">
                 <div class="intro">
                     <h1>Slide 2.2</h1>
                     <p>
