--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class="bg-dark">
     <!--  Navbar  -->
-    <nav class="navbar navbar-expand-lg  fixed-top navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg  fixed-top navbar-dark bg-dark" id="menu">
         <a class="navbar-brand nav-link" href="#">Dony Wahyu</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -33,23 +33,19 @@
     </nav>
     <!--  End Navbar  -->
     
-    <!-- Jumbrotonn -->
-    <section id="home">
-        <div class="jumbotron jumbotron-fluid  bg-transparent text-light mt-5">
-            <div class="container text-center">
-                <figure class="figure mt-4">
-                    <img src="https://res.cloudinary.com/teepublic/image/private/s--hCXq1Vmk--/t_Preview/b_rgb:ffb81c,c_limit,f_jpg,h_630,q_90,w_630/v1538507493/production/designs/3247947_0.jpg" class="figure-img img-thumbnail rounded-circle" style="width:35%;height:35%;">
-                </figure>
-                <div class="display-4">Dony Wahyu Ramadhan</div>
-                <p class="lead">Student & Web Developer</p>
-            </div>
-        </div>
-    </section>
-    <!-- End Jumbroton   -->
+    <!-- Main -->
 
     <div id="fullpage">
         <div class="section " id="section0">
-            <h1>Section 1</h1>
+            <div class="jumbotron jumbotron-fluid  bg-transparent text-light mt-5">
+                <div class="container text-center">
+                    <figure class="figure mt-4">
+                        <img src="https://res.cloudinary.com/teepublic/image/private/s--hCXq1Vmk--/t_Preview/b_rgb:ffb81c,c_limit,f_jpg,h_630,q_90,w_630/v1538507493/production/designs/3247947_0.jpg" class="figure-img img-thumbnail rounded-circle" style="width:35%;height:35%;">
+                    </figure>
+                    <div class="display-4">Dony Wahyu Ramadhan</div>
+                    <p class="lead">Student & Web Developer</p>
+                </div>
+            </div>
         </div>
         <div class="section" id="section1">
             <div class="slide" id="slide1">
@@ -81,7 +77,7 @@
     
 
 
-
+    <!-- End Main -->
 
 
 
