--- a/index.html
+++ b/index.html
@@ -48,12 +48,6 @@
             </div>
         </div>
         <div class="section" id="section1">
-            <div class="slide" id="slide1">
-                <div class="intro">
-                    <h1>Slide 2.1</h1>
-                    <iframe data-src="auto-height.html"></iframe>
-                </div>
-            </div>
             <div class="slide " id="slide2">
                 <div class="intro">
                     <h1>Slide 2.2</h1>
@@ -103,7 +97,7 @@
     <script src="js/fullpage.js" ></script>
     <script type="text/javascript">
         var myFullpage = new fullpage('#fullpage', {
-            sectionsColor: ['#1bbc9b', '#4BBFC3', '#7BAABE', 'whitesmoke', '#ccddff'],
+            sectionsColor: ['#343a40', '#343a40', '#343a40'],
             anchors: ['firstPage', 'secondPage', '3rdPage', '4thpage', 'lastPage'],
             menu: '#menu',
             lazyLoad: true
