--- a/index.html
+++ b/index.html
@@ -35,26 +35,20 @@
     
     <!-- Main -->
 
-    <div id="fullpage">
+    <div id="fullpage" class="text-light">
         <div class="section " id="section0">
-            <div class="jumbotron jumbotron-fluid  bg-transparent text-light mt-5">
-                <div class="container text-center">
-                    <figure class="figure mt-4">
-                        <img src="https://res.cloudinary.com/teepublic/image/private/s--hCXq1Vmk--/t_Preview/b_rgb:ffb81c,c_limit,f_jpg,h_630,q_90,w_630/v1538507493/production/designs/3247947_0.jpg" class="figure-img img-thumbnail rounded-circle" style="width:35%;height:35%;">
-                    </figure>
-                    <div class="display-4">Dony Wahyu Ramadhan</div>
-                    <p class="lead">Student & Web Developer</p>
-                </div>
+            <div class="container text-center mt-5">
+                <figure class="figure mt-4">
+                    <img src="https://res.cloudinary.com/teepublic/image/private/s--hCXq1Vmk--/t_Preview/b_rgb:ffb81c,c_limit,f_jpg,h_630,q_90,w_630/v1538507493/production/designs/3247947_0.jpg" class="figure-img img-thumbnail rounded-circle" style="width:35%;height:35%;">
+                </figure>
+                <div class="display-4">Dony Wahyu Ramadhan</div>
+                <p class="lead">Student & Web Developer</p>
             </div>
         </div>
         <div class="section" id="section1">
             <div class="slide " id="slide2">
                 <div class="intro">
-                    <h1>Slide 2.2</h1>
-                    <p>
-                        We are using the class `active` on this section and in this particular horizontal slide. This way it will appear on the viewport on page load, instead of the 1st section 1st slide.
-                    </p>
-                    <p>You can apply the same logic to horizontal slides</p>
+                    
                 </div>
             </div>
             <div class="slide" id="slide3">
