--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
             sectionsColor: ['#343a40', '#343a40', '#343a40','#343a40'],
             anchors: ['home','about','portofolio','contact'],
             menu: '#menu',
+            slidesNavigation: false,
+	        slidesNavPosition: 'bottom',
             lazyLoad: false
         });
     </script>
