--- a/index.html
+++ b/index.html
@@ -45,20 +45,8 @@
                 <p class="lead">Student & Web Developer</p>
             </div>
         </div>
-        <div class="section text-center" id="about">
-            <div class="slide " id="slide2">
-                Slide 1    
-            </div>
-            <div class="slide" id="slide3">
-                Slide 2
-            </div>
-    
-        </div>
-        <div class="section text-center" id="portofolio">
-            portofolio
-        </div>
-        <div class="section text-center" id="contact">
-            contact
+        <div class="section" id="about">
+            About
         </div>
     </div>
     
