--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
             </div>
         </div>
         <div class="section" id="about">
-            About
+            <div class="container text-center">
+                About
+            </div>
         </div>
     </div>
     
@@ -81,9 +83,6 @@
             sectionsColor: ['#343a40', '#343a40', '#343a40','#343a40'],
             anchors: ['home','about','portofolio','contact'],
             menu: '#menu',
-            slidesNavigation: false,
-	        slidesNavPosition: 'bottom',
-            lazyLoad: false
         });
     </script>
     <!-- End Script -->
