--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <script type="text/javascript">
         var myFullpage = new fullpage('#fullpage', {
             sectionsColor: ['#343a40', '#343a40', '#343a40','#343a40'],
-            anchors: ['home','about','portofolio','contact'],
+            anchors: [],
             menu: '#menu',
         });
     </script>
