--- a/index.html
+++ b/index.html
@@ -35,29 +35,22 @@
     
     <!-- Main -->
 
-    <div id="fullpage" class="text-light">
-        <div class="section active" id="home">
-            <div class="container text-center mt-5">
-                <figure class="figure mt-4">
-                    <img src="https://res.cloudinary.com/teepublic/image/private/s--hCXq1Vmk--/t_Preview/b_rgb:ffb81c,c_limit,f_jpg,h_630,q_90,w_630/v1538507493/production/designs/3247947_0.jpg" class="figure-img img-thumbnail rounded-circle" style="width:35%;height:35%;">
-                </figure>
-                <div class="display-4">Dony Wahyu Ramadhan</div>
-                <p class="lead">Student & Web Developer</p>
-            </div>
-        </div>
-        <div class="section" id="about">
-            <div class="container text-center">
-                About
-            </div>
-        </div>
-        <div class="section" id="portofolio">
-            <div class="container text-center">
-                portofolio
-            </div>
-        </div>
+    <!--
+    <div class="container text-center mt-5">
+        <figure class="figure mt-4">
+            <img src="https://res.cloudinary.com/teepublic/image/private/s--hCXq1Vmk--/t_Preview/b_rgb:ffb81c,c_limit,f_jpg,h_630,q_90,w_630/v1538507493/production/designs/3247947_0.jpg" class="figure-img img-thumbnail rounded-circle" style="width:35%;height:35%;">
+        </figure>
+        <div class="display-4">Dony Wahyu Ramadhan</div>
+        <p class="lead">Student & Web Developer</p>
     </div>
+    -->
     
-
+    <div id="fullpage">
+        <div class="section">Some section</div>
+        <div class="section">Some section</div>
+        <div class="section">Some section</div>
+        <div class="section">Some section</div>
+    </div>
 
     <!-- End Main -->
 
