--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <script type="text/javascript">
         var myFullpage = new fullpage('#fullpage', {
             sectionsColor: ['#343a40', '#343a40', '#343a40','#343a40'],
-            anchors: [],
+            anchors: ['home','about','portofolio'],
             menu: '#menu',
         });
     </script>
