--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 <body class="bg-dark">
     <!--  Navbar  -->
     <nav class="navbar navbar-expand-lg  fixed-top navbar-dark bg-dark" id="menu">
-        <a data-menuanchor="home" class="navbar-brand nav-link" href="#home">Dony Wahyu</a>
+        <a  class="navbar-brand nav-link" href="#home">Dony Wahyu</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a data-menuanchor="about" class="nav-link" href="#about">About </a>
+                    <a  class="nav-link" href="#about">About </a>
                 </li>
                 <li class="nav-item">
-                    <a data-menuanchor="portofolio" class="nav-link" href="#portofolio">Portofolio</a>
+                    <a class="nav-link" href="#portofolio">Portofolio</a>
                 </li>
                 <li class="nav-item">
-                    <a data-menuanchor="contact" class="nav-link" href="#contact">Contact</a>
+                    <a  class="nav-link" href="#contact">Contact</a>
                 </li>
             </ul>
         </div>
