--- a/index.html
+++ b/index.html
@@ -60,7 +60,12 @@
         </div>
         <div class="section" id="portofolio">
             <div class="container text-center">
-                portofolio
+                Portofolio
+            </div>
+        </div>
+        <div class="section" id="contact">
+            <div class="container text-center">
+                Contact
             </div>
         </div>
     </div>
