--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     -->
     <div id="fullpage" class="text-light">
-        <div class="section active" id="home">
+        <div class="section" id="home">
             <div class="container text-center mt-5">
                 <figure class="figure mt-4">
                     <img src="https://res.cloudinary.com/teepublic/image/private/s--hCXq1Vmk--/t_Preview/b_rgb:ffb81c,c_limit,f_jpg,h_630,q_90,w_630/v1538507493/production/designs/3247947_0.jpg" class="figure-img img-thumbnail rounded-circle" style="width:35%;height:35%;">
