--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a  class="nav-link" href="#about">About </a>
                 </li>
                 <li class="nav-item">
